# tucan-exam-explorer

./: .gitignore  README.MD
.github/workflows/: web-app.yml
data/: README.MD  ss2023_fb01_exams.txt  ss2025_fb01_exams.txt  wi2223_fb01_exams.txt  ws2324_fb01_exams.txt
docs/: exam-ids.md
exam-id-scanner/: Cargo.toml  rustfmt.toml
exam-id-scanner/src/: logging.rs  main.rs  predictor.rs
js-tools/: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
js-tools/cli/register-exam-ids/: package.json
js-tools/cli/register-exam-ids/src/: main.ts
js-tools/cli/vv-fetcher/: .gitignore  package.json
js-tools/cli/vv-fetcher/src/: main.ts  vv-downloader.ts
js-tools/shared/: package.json
js-tools/shared/src/: campusnet-client.ts  index.ts  logging.ts  utils.ts
js-tools/shared/src/parser/: index.ts  registration-auditor.spec.ts  registration-auditor.ts  student-grades-diagramm.spec.ts  student-grades-diagramm.ts  utils-test.ts  utils.ts
tucan-scripts/: tucan-export-exam-ids.js  tucan-export-session.js
web-app/: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  package.json  pnpm-lock.yaml  svelte.config.js
web-app/drizzle/: 0000_exams_table.sql
web-app/drizzle/meta/: 0000_snapshot.json  _journal.json
web-app/src/: app.d.ts  app.html  hooks.server.ts
web-app/src/lib/: index.ts
web-app/src/lib/server/: dependency-injection.ts  env.ts  jwt.ts
web-app/src/lib/shared/: department.ts
web-app/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  layout.css
web-app/src/routes/details/: +layout.server.ts  (+3 more)
(+30 files in other folders)
