[package]
name = "exam-id-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
html5ever = "0.36.1"
indicatif = "0.18.3"
log = "0.4.29"
markup5ever_rcdom = "0.36.0"
regex = "1.12.2"
reqwest = "0.13.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
